syntax = "proto3";
package com.panelsw.ca;
option optimize_for = LITE_RUNTIME;

message XslTransformDetails{

	bytes xsl_path = 1;
	bytes xml_path = 2;
}
